  - FLTK's ABI version can be configured with 'configure' and CMake.
    See documentation in README.abi-version.txt.

  Bundled libraries

  - Bundled image libraries have been upgraded to newer versions.
    For details see README.bundled-libs.txt.

  1.4.0 ABI FEATURES

  - None. FLTK 1.4.0 has a new ABI, breaking 1.3.x ABI.


  Other Improvements

  - (add new items here)
  - Fix Fl::add_timeout() in draw() under Linux (STR 3188)
  - Class Fl_Native_File_Chooser uses in priority the file chooser dialog
    of GTK version 3 when available on the running X11 platform, and falls back
    to version 2 when V3 is not available. In contrast, GTK version 2 was used
    in priority by FLTK 1.3.x
  - Added support for macOS 10.15 "Catalina"
  - Improved documentation for '@' symbols in labels (STR #2940).
  - Fl_Roller can now be controlled via the mouse wheel (STR #3120).
  - Tooltips hide by themselves after 12 seconds (STR #2584).
  - Added widget visibility indicator to Fluid (STR #2669).
  - Added Fl_Input_::append() method (STR #2953).
  - Fix for STR#3473 (and its duplicate STR#3507) to restore configure-based
    builds on recent Linux/Unix distributions where the freetype-config
    command has been replaced by pkg-config.
  - Added support for MacOS 10.14 "Mojave": all drawing to windows is done
    through "layer-backed views" when the app is linked to SDK 10.14.
  - MacOS ≥ 10.10: Fl_Window::fullscreen() and fullscreen_off() no longer
    proceed by Fl_Window::hide() + Fl_Window::show() but essentially
    resize the window, as done on the X11+EWMH and Windows platforms.
  - Fl_Cairo_Window constructors are now compatible with Fl_Double_Window
    constructors - fixed missing constructors (STR #3160).
  - The include file for platform specific functions and definitions
    (FL/x.H) has been replaced with FL/platform.H. FL/x.H is deprecated
    but still available for backwards compatibility (STR #3435).